--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: todo_app
-description: A new Flutter project.
+name: Todo
+description: A Todo app to list your tasks!
 
 version: 1.0.0+1
 
@@ -26,6 +26,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/todo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
